[package]
name = "vote"
version = "0.1.0"
authors = ["hanshaoxin <hanshaoxin@corp-ci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
c123chain-cdk = {path="../RustSDK/"}

[profile.release]
opt-level = "s"
lto = true